Mise en page du site avec l'ajout du fichier style.css

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Jean de la Fontaine</title>
-		
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	
 	<body>
@@ -18,19 +18,19 @@ Tout l'été,<br />
 Se trouva fort dépourvue<br />
 Quand la bise fut venue.<br />
 Pas un seul petit morceau<br />
-De mouche ou de vermisseau (1).<br />
+De mouche ou de vermisseau.<br />
 Elle alla crier famine<br />
 Chez la Fourmi sa voisine,<br />
 La priant de lui prêter<br />
 Quelque grain pour subsister<br />
 Jusqu'à la saison nouvelle.<br />
 Je vous paierai, lui dit-elle,<br />
-Avant l'août (2), foi d'animal,<br />
+Avant l'août, foi d'animal,<br />
 Intérêt et principal.<br />
 La Fourmi n'est pas prêteuse ;<br />
-C'est là son moindre défaut (3).<br />
+C'est là son moindre défaut.<br />
 Que faisiez-vous au temps chaud ?<br />
-Dit-elle à cette emprunteuse (4).<br />
+Dit-elle à cette emprunteuse.<br />
 Nuit et jour à tout venant<br />
 Je chantais, ne vous déplaise.<br />
 Vous chantiez ? j'en suis fort aise :<br />
